# akson

./: .dockerignore  .env.example  404.html  Dockerfile  LICENSE.md  README-org.md  README.md  agent.py  akson.py  assistant.py  chat_interface.py  compose.yaml  crowd.py  fake_interview.py  framework.py  function_calling.py  index.html  loader.py  main.py  objects.inv  openai_compat.py  pyproject.toml  registry.py  run.sh  sitemap.xml
agents/: assistant.py  chatgpt.py  interviewer.py
akson/: index.html
api/: .env.example  Dockerfile  akson.py  deps.py  id_generator.py  loader.py  logger.py  main.py  mkdocs.yml  models.py  openai_compat.py  pubsub.py  pyproject.toml  pyrightconfig.json  pytest.ini  registry.py  runner.py  tasks.py
api/assistants/: README.md  assistant.py  chatgpt.py  claude.py  exa.py  exception.py  gemini.py  gmail.py  mathematician.py  mathematician2.py  mathematician3.py  mathematician4.py  movie.py  perplexity.py  therapist.py  waffle.py  websearch.py
api/assistants/prompts/: perplexity_prompt_guide.md
api/docs/: akson.md  framework.md  index.md
api/framework/: __init__.py  agent.py  function_calling.py  llm_assistant.py  streaming.py  test_agent.py  test_function_calling.py  test_llm_assistant.py  test_streaming.py  test_toolkit.py  toolkit.py
assistants/: assistant.py  chatgpt.py  claude.py  exa.py  gmail.py  gmail_composio.py  gmail_mcp.py  mathematician.py  mathematician2.py  mathematician3.py  mathematician4.py  movie.py  obsidian.py  perplexity.py  pizza-orderer.py  prompt.py  replier.py  rewriter.py  (+1 more)
client/: pyproject.toml
client/src/akson_client/: __init__.py
telegram-bot/: .env.example  Dockerfile  main.py  pyproject.toml
(+32 files in other folders)
